# -

./: 淘宝用户购物行为可视化数据分析.ipynb
G03-304 - 副本/: run_agent.bat  start_agent.py
G03-304 - 副本/ml_course_design/: README.md  pyproject.toml
G03-304 - 副本/ml_course_design/src/: __init__.py  features.py  infer.py  streamlit_app.py  train.py
客户流失预测系统/: run_agent.ps1  test_agent.py
客户流失预测系统/ml_course_design/: README.md
客户流失预测系统/ml_course_design/models/: best_model.joblib  best_model_lr.joblib  features.joblib
客户流失预测系统/ml_course_design/src/: agent_app.py  data.py
