[project]
name = "ml_course_design"
version = "0.1.0"
description = "Machine Learning + Agent Course Design"
authors = [{ name = "Student", email = "student@example.com" }]
requires-python = ">=3.12"
dependencies = [
    "polars>=0.20.0",
    "pandas>=2.2.0",
    "seaborn>=0.13.0",
    "pydantic>=2.5.0",
    "pandera>=0.18.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.3.0",
    "pydantic-ai>=0.2.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.30.0",
    "joblib>=1.3.0",
    "plotly>=6.5.1",
]

[tool.uv]
# uv 配置

